Traefik/Ingressroute-tls/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
   name: webapp-cluster-srv
spec:
  selector:
   app: webapp
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
